Add alert massage

--- a/NamesCompApp/Base.lproj/Main.storyboard
+++ b/NamesCompApp/Base.lproj/Main.storyboard
@@ -160,7 +160,7 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <connections>
-                                    <action selector="backButtonTapped" destination="nTL-mZ-lsj" eventType="touchUpInside" id="9ls-rs-gDv"/>
+                                    <segue destination="S3j-f6-s61" kind="unwind" unwindAction="unwindSegueToFirstVCWithSegue:" id="CEF-bl-NHd"/>
                                 </connections>
                             </button>
                         </subviews>
